fix: [10001373] gap in calendat

--- a/src/components/Calendar/Body/CalendarBody.module.css
+++ b/src/components/Calendar/Body/CalendarBody.module.css
@@ -1,7 +1,6 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: 8px;
   color: var(--text-disabled-color);
 }
 
@@ -9,6 +8,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  margin-bottom: 12px;
 }
 
 .monthYear {
